midpoint/release/3.8/index.adoc
---
release-version: '3.8'
---
= MidPoint 3.8 "Watt"
:page-layout: release
:release-version: 3.8
:page-wiki-name: Release 3.8
:page-wiki-id: 24676166
:page-wiki-metadata-create-user: semancik
:page-wiki-metadata-create-date: 2017-12-13T12:28:09.719+01:00
:page-wiki-metadata-modify-user: semancik
:page-wiki-metadata-modify-date: 2020-01-30T10:45:14.937+01:00
:page-liquid:

Release {release-version} is a twenty-sixth midPoint release code-named _Watt_.
The {release-version} release brings major performance and scalability improvements.
There are also provisioning, security and user interface improvements.

++++
{% include release-data.html %}
++++

++++
{% capture dedicationContent %}
<p>
    <a href="https://en.wikipedia.org/wiki/James_Watt">James Watt</a> (1736 - 1819) was Scottish inventor best known for his significant improvement of the steam engine.
    Watt steam engine was more powerful and efficient than early steam engines.
    Those improvements contributed to economic viability of steam engine, which was a crucial element of industrial revolution.
</p>
<p>
    Similarly to Watt's steam engine, midPoint 3.8 brings major improvements to performance, efficiency and scalability.
    MidPoint 3.8 is designed to handle millions of identities with even higher scaling potential.
    While fundamental data model of midPoint remains basically the same (and compatible), there were significant improvements to the methods how the data are stored in the database.
    Handling of the data and especially processing of data changes was also improved.
    Therefore midPoint 3.8 should be faster.
    But even more importantly - midPoint 3.8 should be able to work in deployments that were traditionally considered to be beyond the reach of a comprehensive identity management and governance solution.
</p>
{% endcapture %}
{% include release-dedication.html content=dedicationContent %}
++++

== Features

midPoint 3.8 provides following features:

* *Common identity management data model*

** Extensible object types:

*** User objects to represent users, physical persons and xref:/midpoint/reference/latest/misc/persona/[personas]

*** Role objects to represent roles, privileges, jobs and so on

*** Org objects to represent xref:/midpoint/reference/latest/org/organizational-structure/[organizational units], teams, workgroups, etc.

*** Service objects to represent servers, network devices, mobile devices, network services, etc.

** Numerous built-in properties

** Extensibility by custom properties

** Completely schema-aware system

*** Dynamic schema automatically retrieved from resource

*** Support for primitive data types

*** Native support of multi-value attributes

*** Limited support for complex data types

** Processing and computation fully based on xref:/midpoint/reference/latest/concepts/relativity/[relative changes]

** Off-the-shelf support for user password credentials

** Off-the-shelf support for activation (users, roles, orgs, services)

*** Enabled/disabled states (extensible in the future)

*** Support for user validity time constraints (valid from, valid to)

** Object template to define policies, default values, etc.

*** Ability to use conditional mappings (e.g. to create RB-RBAC setup)

*** Ability to include other object templates

*** Global and resource-specific template setup

** Representation of all configuration and data objects in XML, JSON and YAML

** Annotation support (such as "experimental" and "deprecated" annotation to control data model evolution)

** xref:/midpoint/reference/latest/schema/polystring-normalization/[Customizable PolyString normalization]


* *Identity management*

** xref:/midpoint/reference/latest/synchronization/examples/[Enabling and disabling accounts]

** Support for xref:/midpoint/reference/latest/expressions/[mapping and expressions] to determine account attributes

** xref:/midpoint/reference/latest/resources/resource-configuration/schema-handling/[Multi-layer attribute access limitations]

** xref:/midpoint/reference/latest/resources/provisioning-dependencies/[Provisioning dependencies]

*** Higher-order dependencies (enables partial support for circular provisioning dependencies)

** xref:/midpoint/reference/latest/synchronization/consistency/[Provisioning robustness] - ability to provision to non-accessible (offline) resources

** xref:/midpoint/reference/latest/synchronization/consistency/[Provisioning consistency] - ability to handle provisioning errors and compensate for inconsistencies

** xref:/midpoint/reference/latest/resources/propagation/[Provisioning Propagation]

** Support for xref:/midpoint/reference/latest/resources/resource-configuration/schema-handling/#attribute-tolerance[tolerant attributes]

*** Ability to select tolerant and non-tolerant values using a pattern (regexp)

** Support for volatile attributes (attributes changed by the resource)

** xref:/midpoint/reference/latest/concepts/matching-rules/[Matching Rules]

*** Matching rules to support case insensitive attributes, DN and UUID attributes, XML attributes, etc.
(extensible)

*** Automatic matching rule discovery

** Provisioning scripts

*** Ability to execute scripts before/after provisioning operations

*** Ad-hoc provisioning script execution

*** xref:/midpoint/reference/latest/schema/object-references/[Object schema validation during import] (can be switched off)

*** xref:/midpoint/reference/latest/schema/object-references/[Smart references between objects based on search filters]

** Advanced support for account activation (enabled/disabled states)

*** Standardized account activation that matches user activation schema for easy integration

*** Ability to simulate activation capability if the connector does not provide it

*** Support for account lock-out

*** Support for account validity time constrains (valid from, valid to)

*** Support easy xref:/midpoint/reference/latest/resources/resource-configuration/schema-handling/activation/[activation existence mappings] (e.g. easy configuration of "disables instead of delete" feature)

*** Support for xref:/midpoint/reference/latest/expressions/mappings/[mapping time constraints] in activation mappings that allow configuring time-related provisioning features such as xref:/midpoint/reference/latest/resources/resource-configuration/schema-handling/activation/[deferred account delete or pre-provisioning].

** Ability to specify set of xref:/midpoint/reference/latest/resources/resource-configuration/protected-accounts/[protected accounts] that will not be affected by IDM system

** Support for base context searches for connectors that support object hierarchies (such as LDAP)

** xref:/midpoint/reference/latest/misc/notifications/[Notifications]

** xref:/midpoint/reference/latest/misc/bulk/[Bulk actions]

** Passive xref:/midpoint/reference/latest/resources/attribute-caching/[Attribute Caching] (EXPERIMENTAL)

** Partial multi-tenancy support


* *Synchronization*

** xref:/midpoint/reference/latest/synchronization/introduction/[Live synchronization]

** xref:/midpoint/reference/latest/concepts/relativity/[Reconciliation]

*** Ability to execute scripts before/after reconciliation

** Correlation and confirmation expressions

*** Conditional correlation expressions

** Concept of _channel_ that can be used to adjust synchronization behaviour in some situations

** xref:/midpoint/reference/latest/synchronization/generic-synchronization/[Generic Synchronization] allows synchronization of roles to groups to organizational units to ... anything

** Self-healing xref:/midpoint/reference/latest/synchronization/consistency/[consistency mechanism]


* *Advanced RBAC*

** xref:/midpoint/reference/latest/expressions/expressions/[Expressions in the roles]

** Hierarchical roles

** Conditional roles and assignments/inducements

** Parametric roles (including ability to assign the same role several times with different parameters)

** Temporal constraints (validity dates: valid from, valid to)

** xref:/midpoint/reference/latest/roles-policies/metaroles/gensync/[Metaroles]

** Role catalog

** Role request based on shopping cart paradigm

** Several xref:/midpoint/reference/latest/synchronization/projection-policy/[assignment enforcement modes]

*** Ability to specify global or resource-specific enforcement mode

*** Ability to "legalize" assignment that violates the enforcement mode

** Rule-based RBAC (RB-RBAC) ability by using conditional mappings in xref:/midpoint/reference/latest/expressions/object-template/[user template] and xref:/midpoint/reference/latest/roles-policies/role-autoassignment/[role autoassignment] and entitlement associations

** GUI support for entitlement listing, membership and editing

** Entitlement approval

** User-friendly entitlement association management


* *Identity governance*

** Powerful xref:/midpoint/reference/latest/org/organizational-structure/[organizational structure management]

** xref:/midpoint/reference/latest/cases/workflow-3/[Workflow support] (based on link:http://www.activiti.org/[Activiti] engine)

*** Declarative policy-based multi-level xref:/midpoint/reference/latest/cases/approval/[approval] process

*** Visualization of approval process

** xref:/midpoint/reference/latest/concepts/object-lifecycle/[Object lifecycle] property

** Object history (time machine)

** xref:/midpoint/reference/latest/roles-policies/policy-rules/[Policy Rules] as a unified mechanism to define identity management, governance and compliance policies

** xref:/midpoint/reference/latest/roles-policies/segregation-of-duties/[Segregation of Duties] (SoD)

*** Many options to define xref:/midpoint/reference/latest/roles-policies/segregation-of-duties/[role exclusions]

*** SoD approvals

*** SoD certification

** Assignment constraints for roles and organizational structure

** xref:/midpoint/reference/latest/roles-policies/certification/[Access certification]

** Ad-hoc recertificaiton

** Basic xref:/midpoint/reference/latest/roles-policies/role-lifecycle/[role lifecycle] management (role approvals)

** xref:/midpoint/reference/latest/roles-policies/applicable-policies/[User-friendly policy selection]

** xref:/midpoint/reference/latest/misc/deputy/[Deputy] (ad-hoc privilege delegation)

** Escalation in approval and certification processes

** xref:/midpoint/reference/latest/misc/persona/[Personas]

** Rich assignment meta-data

** Data protection (experimental)


* *Expressions, mappings and other dynamic features*

** xref:/midpoint/reference/latest/expressions/sequences/[Sequences] for reliable allocation of unique identifiers

** xref:/midpoint/reference/latest/expressions/expressions/[Customization expressions]

*** xref:/midpoint/reference/latest/expressions/expressions/script/groovy/[Groovy]

*** Python

*** xref:/midpoint/reference/latest/expressions/expressions/script/javascript/[JavaScript (ECMAScript)]

*** Built-in libraries with a convenient set of functions

** xref:/midpoint/reference/latest/expressions/expressions/[PolyString] support allows automatic conversion of strings in national alphabets

** Mechanism to iteratively determine unique usernames and other identifier

** xref:/midpoint/reference/latest/expressions/function-libraries/[Function libraries]


* *Web-based administration user interface*

** Ability to execute identity management operations on users and accounts

** User-centric views

** Account-centric views (browse and search accounts directly)

** Resource wizard

** Layout automatically adapts to screen size

** Easily customizable look & feel

** Built-in XML editor for identity and configuration objects

** Identity merge

** GUI support for xref:/midpoint/reference/latest/samples/configurable-transform-sample/[more complex data in object extension] (containers), improved GUI customization (experimental)

** Support for custom static web content


* *Self-service*

** User profile page

** Password management page

** Role selection and request dialog

** Self-registration

** Email-based password reset


* *Connectors*

** Integration of xref:/connectors/connectors/[ConnId identity connector framework]

*** Support for Evolveum Polygon connectors

*** Support for ConnId connectors

*** Support for OpenICF connectors (limited)

** Automatic generation and caching of xref:/midpoint/reference/latest/resources/resource-schema/[resource schema] from the connector

** xref:/midpoint/architecture/archive/data-model/midpoint-common-schema/connectortype/[Local connector discovery]

** Support for connector hosts and remote xref:/midpoint/architecture/archive/data-model/midpoint-common-schema/connectortype/[connectors], xref:/connectors/connectors/[identity connector] and xref:/midpoint/architecture/archive/data-model/midpoint-common-schema/connectorhosttype/[connectors host type]

** Remote connector discovery

** xref:/midpoint/reference/latest/resources/manual/[Manual Resource and ITSM Integration]

*** Simple management of cases - internal midPoint tickets (contributed, experimental)

** xref:/midpoint/architecture/archive/subsystems/provisioning/ucf/[Unified Connector Framework (UCF) layer to allow more provisioning frameworks in the future]


* *Flexible identity repository implementations and SQL repository implementation*

** xref:/midpoint/reference/latest/repository/generic/implementation/[Identity repository based on relational databases]

** xref:/midpoint/guides/admin-gui-user-guide/#keeping-metadata-for-all-objects-creation-modification-approvals[Keeping metadata for all objects] (creation, modification, approvals)

** xref:/midpoint/reference/latest/deployment/removing-obsolete-information/[Automatic repository cleanup] to keep the data store size sustainable



* *Security*

** Fine-grained authorization model

*** xref:/midpoint/reference/latest/security/authorization/configuration/[Authorization expressions]

*** Limited xref:/midpoint/reference/latest/security/power-of-attorney/[power of attorney] implementation

** Organizational structure and RBAC integration

** Delegated administration

** Password management

*** Password distribution

*** xref:/midpoint/reference/latest/security/credentials/password-policy/[Password policies]

*** Password retention policy

*** Password metadata

*** Self-service password management

*** Password storage options (encryption, hashing)

*** Mail-based initialization of passwords for new accounts

** CSRF protection

** Auditing to xref:/midpoint/reference/latest/security/audit/#logfile-auditing[file (logging)]

** Auditing to xref:/midpoint/reference/latest/security/audit/#database-table-auditing[SQL table]

** Interactive audit log viewer


* *Extensibility*

** xref:/midpoint/reference/latest/schema/custom-schema-extension/[Custom schema extensibility]

** xref:/midpoint/reference/latest/concepts/clockwork/scripting-hooks/[Scripting Hooks]

** xref:/midpoint/reference/latest/misc/lookup-tables/[Lookup Tables]

** Support for overlay projects and deep customization

** Support for programmatic custom GUI forms (Apache Wicket components)

** Basic support for declarative custom forms

** API accessible using a REST, web services (SOAP) and local JAVA calls


* *Reporting*

** Scheduled reports

** Lightweight reporting (CSV export) built into user interface

** Comprehensive reporting based on Jasper Reports

** xref:/midpoint/reference/latest/misc/reports/post-report-script/[Post report script]


* *Internals*

** xref:/midpoint/reference/latest/tasks/task-manager/[Task management]

*** xref:/midpoint/reference/latest/tasks/task-template/[Task template]

*** xref:/midpoint/reference/latest/tasks/node-sticky-tasks/[Node-sticky tasks]

*** xref:/midpoint/devel/design/multi-node-partitioned-and-stateful-tasks/['Multi-node, partitioned and stateful tasks']


* *Operations*

** Lightweight deployment structure with two deployment options:

*** xref:/midpoint/reference/latest/deployment/stand-alone-deployment/[Stand-alone deployment]

*** Deployment to web container (WAR)

** xref:/midpoint/reference/latest/tasks/task-manager/[Multi-node task manager component with HA support]

** Comprehensive logging designed to aid troubleshooting

** Enterprise class scalability (hundreds of thousands of users)


* *Documentation*

** xref:/midpoint/[Administration documentation publicly available in the wiki]

** xref:/midpoint/architecture/[Architectural documentation publicly available in the wiki]

** Schema documentation automatically generated from the definition (xref:/midpoint/reference/latest/schema/schemadoc/[schemadoc])

== Changes With Respect to Version 3.7

* User interface improvements

** xref:/midpoint/reference/latest/roles-policies/applicable-policies/[User-friendly policy selection]

** User-friendly entitlement association management

** GUI support for xref:/midpoint/reference/latest/samples/configurable-transform-sample/[more complex data in object extension] (containers), improved GUI customization (experimental)

** Simple GUI pages for _cases_ (internal midPoint tickets) contributed by link:https://www.exclamationlabs.com/[Exclamation Labs]

** Support for custom static web content in midpoint home directory

** Support for `experimental` annotation

** Ability to override `experimental` and `deprecated` annotations

** Minor user experience improvements


* Data model improvements

** Full implementation of `subtype` property

** Properties `locality`, `costCenter`, `preferredLanguage`, `locale`, `timezone`, `emailAddress` and `telephoneNumber` moved up from `UserType` to `FocusType`.

** xref:/midpoint/reference/latest/schema/polystring-normalization/[Customizable PolyString normalization]


* Security improvements

** xref:/midpoint/reference/latest/security/credentials/password-policy/[Password Policy: prohibited projection values]

** Negative item enumeration in authorizations (`exceptItem`)

** Expression code requires just execution-phase authorizations, it does not need request-phase authorizations any more

** Improved password metadata


* Provisioning

** xref:/midpoint/reference/latest/resources/propagation/[Provisioning Propagation]

** Ad-hoc provisioning script execution

** Improved error handling, especially criticality of ITSM errors

** Provisioning dependencies may use filter in dependency specification


* Performance and scalability improvements

** Optimized database schema for better performance and scalability

** Autoincrement field for audit record storage

** xref:/midpoint/devel/design/multi-node-partitioned-and-stateful-tasks/['Multi-node, partitioned and stateful tasks']

** Audit delta and operation result compression

** xref:/midpoint/reference/latest/repository/generic/configuration/[Repository layer cache]


* Miscellaneous improvements

** Improved handling of xref:/midpoint/reference/latest/expressions/function-libraries/[function library] updates

** Minor mapping improvements

** Basic data protection features (experimental)

** Improved SMS gateway support (HTTP POST method)

** Support for `configuration` variable in inbound mappings

** Start scripts for `ninja` tool (`ninja.sh, ninja.bat`)

** Improved documentation


* Connectors

** CSV connector supports script execution

** Active Directory connector supports CredSSP version 5 and 6 (see CVE-2018-0886)



Oracle database 11g is no longer supported.
It is replaced by Oracle 12c database support. +
Support for PostgreSQL 9.4 and earlier is deprecated.
PostgreSQL 8.4.x and earlier is no longer supported. +
MySQL 5.6 and earlier is no longer supported. +
Microsoft SQL 2008 and 2008 R2 are no longer supported.
Microsoft SQL Server 2012 support is deprecated.


++++
{% include release-quality.html %}
++++

=== Limitations

* MidPoint 3.8 comes with a bundled LDAP-based eDirectory connector.
This connector is stable, however it is not included in the normal midPoint support.
Support for this connector has to be purchased separately.

* There is an option to modify midPoint to support LDAP and CAS authentication by using Spring Security modules.
This method is used in several midPoint deployments.
However, such authentication modules are not officially supported as part of usual midPoint subscriptions.
Only community-level support is provided for those modules.
Commercial-grade support for this authentication method is available, but it has to be explicitly negotiated in a subscription contract.

* MidPoint user interface has flexible (fluid) design and it is able to adapt to various screen sizes, including screen sizes used by some mobile devices.
However, midPoint administration interface is also quite complex and it would be very difficult to correctly support all midPoint functionality on very small screens.
Therefore midPoint often works well on larger mobile devices (tablets) it is very likely to be problematic on small screens (mobile phones).
Even though midPoint may work well on mobile devices, the support for small screens is not included in standard midPoint subscription.
Partial support for small screens (e.g. only for self-service purposes) may be provided, but it has to be explicitly negotiated in a subscription contract.

* There are several add-ons and extensions for midPoint that are not explicitly distributed with midPoint.
This includes midPoint plug-in for Eclipse IDE, extension of Jasper studio, Java client library, various samples, scripts, connectors and other non-bundled items.
Support for these non-bundled items is limited.
Generally speaking those non-bundled items are supported only for platform subscribers and those that explicitly negotiated the support in their contract.
For other cases there is only community support available.
For those that are interested in official support for IDE add-ons there is a possibility to use xref:/support/subscription-sponsoring/[subscription] to help us develop midPoint studio (bug:MID-4701[]).

MidPoint is known to work well in the following deployment environment.
The following list is list of *tested* platforms, i.e. platforms that midPoint team or reliable partners personally tested with this release.
The version numbers in parentheses are the actual version numbers used for the tests.

It is very likely that midPoint will also work in similar environments.
But only the versions specified below are supported as part of midPoint subscription and support programs - unless a different version is explicitly agreed in the contract.

Support for some platforms is marked as "deprecated".
Support for such deprecated versions can be removed in any midPoint release.
Please migrate from deprecated platforms as soon as possible.

=== Java

* OpenJDK 8 (1.8.0_91, 1.8.0_111, 1.8.0_151)

* Sun/Oracle Java SE Runtime Environment 8 (1.8.0_45, 1.8.0_65, 1.8.0_74, 1.8.0_131)

=== Web Containers

* Apache Tomcat 8 (8.0.14, 8.0.20, 8.0.28, 8.0.30, 8.0.33, 8.5.4)

* BEA/Oracle WebLogic 12c (12.2.1.3.0) -  special subscription required

[NOTE]
.Web container (application server) support
====
MidPoint 3.7 introduced xref:/midpoint/reference/latest/deployment/stand-alone-deployment/[Stand-alone deployment] form that does not need an application server.
This is the primary deployment model for midPoint.
The deployment to web container is still supported.
However the only supported web container is Apache Tomcat.
Other web containers (application servers) may be supported if the support is explicitly negotiated in midPoint subscription.
Except for those cases midPoint development team will not provide any support for other web containers.

Currently there are no plans to remove support for deployed midPoint installation using a WAR file.
However, it is possible that this deployment form will get phased out eventually unless there are active subscribers preferring this deployment method.
MidPoint subscription is strongly recommended if you plan to use this method in the future.

See also xref:/faq/tomcat-deployment/[Is Tomcat deployment still supported?] in the xref:/faq/[Frequently Asked Questions] section.
====

=== Databases

* H2 (embedded).
Supported only in embedded mode.
Not supported for production deployments.
Only the version specifically bundled with midPoint is supported. +
H2 is intended only for development, demo and similar use cases.
It is *not* supported for any production use.
Also, upgrade of deployments based on H2 database are not supported.

* PostgreSQL 9 (9.1, 9.2, 9.3, 9.4, 9.4.5, 9.5, 9.5.1).
Support for PostgreSQL 9.4 and earlier is deprecated.

* MariaDB (10.0.28)

* MySQL 5.7 (5.7)

* Oracle 12c

* Microsoft SQL Server 2012, 2014.
Microsoft SQL Server 2012 support is deprecated.

=== Supported Browsers

* Firefox (any recent version)

* Safari (any recent version)

* Chrome (any recent version)

* Opera (any recent version)

* Microsoft Internet Explorer (version 9 or later)

Recent version of browser as mentioned above means any stable stock version of the browser released in the last two years.
We formally support only stock, non-customized versions of the browsers without any extensions or other add-ons.
According to the experience most extensions should work fine with midPoint.
However, it is not possible to test midPoint with all of them and support all of them.
Therefore, if you chose to use extensions or customize the browser in any non-standard way you are doing that on your own risk.
We reserve the right not to support customized web browsers.

Microsoft Internet Explorer compatibility mode is *not* supported.

== Important Bundled Components

[%autowidth]
|===
| Component | Version | Description

| ConnId
| 1.4.3.11
| ConnId Connector Framework


| LDAP connector bundle
| 1.6
| LDAP, Active Directory and eDirectory connector


| CSV connector
| 2.2
| Connector for CSV files


| DatabaseTable connector
| 1.4.2.0
| Connector for simple database tables

|===

++++
{% include release-download.html %}
++++

[NOTE]
.Stand-alone deployment model
====
MidPoint deployment method has changed in midPoint release 3.7.
xref:/midpoint/reference/latest/deployment/stand-alone-deployment/[Stand-alone deployment] is now the default deployment method.
MidPoint default configuration, scripts and almost everything else was adapted for this method.

* *New midPoint users* and *new deployments* should simply follow the xref:install.adoc[installation manual].

* *Existing deployments* prior to version 3.7 may keep using exactly the same configuration as before.
xref:/midpoint/install/webapp-deployment/[Deployment of midPoint as Web Application] is still supported as an alternative.
However, xref:/midpoint/reference/latest/deployment/stand-alone-deployment/[stand-alone deployment] is now the primary option.
It is recommended to migrate the deployment based on application server to a stand-alone deployment in the future.
See our xref:/midpoint/reference/latest/upgrade/tomcat-to-standalone/[brief migration guide].
====

== Upgrade

MidPoint is software that is designed for easy upgradeability.
We do our best to maintain strong backward compatibility of midPoint data model, configuration and system behavior.
However, midPoint is also very flexible and comprehensive software system with a very rich data model.
It is not humanly possible to test all the potential upgrade paths and scenarios.
Also some changes in midPoint behavior are inevitable to maintain midPoint development pace.
Therefore we can assure reliable midPoint upgrades only for link:https://evolveum.com/services/[midPoint subscribers]. This section provides overall overview of the changes and upgrade procedures.
Although we try to our best it is not possible to foresee all possible uses of midPoint.
Therefore the information provided in this section are for information purposes only without any guarantees of completeness.
In case of any doubts about upgrade or behavior changes please use services associated with link:https://evolveum.com/services/[midPoint subscription] or purchase link:https://evolveum.com/services/professional-services/[professional services].


=== Upgrade from midPoint 3.0, 3.1, 3.1.1, 3.2, 3.3, 3.3.1, 3.4, 3.4.1, 3.5, 3.5.1, 3.6 and 3.6.1

Upgrade path from MidPoint 3.0 goes through midPoint 3.1, 3.1.1, 3.2, 3.3, 3.4.1, 3.5.1 and 3.6.1. Upgrade to midPoint 3.1 first.
Then upgrade from midPoint 3.1 to 3.1.1, from 3.1.1 to 3.2 then to 3.3, then to 3.4.1, 3.5.1, 3.6.1, 3.7.1 and finally to 3.8.

=== Upgrade from midPoint 3.7 and 3.7.1

MidPoint 3.8 data model is essentially backwards compatible with previous midPoint versions.
However, there were changes that may affect some deployments:

* Object subtype was fully implemented.
Subtype is now the recommended way how to sort object such as users into smaller categories and types.
Subtype is a direct replacement for `employeeType`, `roleType` and `serviceType`. Introduction of subtype as step towards schema unification.
Existing deprecated properties (`employeeType`, `roleType` and `serviceType`) still work in the same way as they have worked in previous midPoint versions (with one exception, see below).
However, `subtype` property should be used as a replacement whenever possible.
The only difference in functionality is that xref:/midpoint/reference/latest/misc/persona/[personas] construction will now set `subtype` property in new personas instead of `employeeType` property as it was in previous midPoint versions.

* Properties `locality`, `costCenter`, `preferredLanguage`, `locale`, `timezone`, `emailAddress` and `telephoneNumber` moved up from `UserType` to `FocusType`. This should be a transparent change for existing objects.
Moving those properties up in a type hierarchy allows to use those properties in other focal types (roles, orgs, services).

Even though the basic database model is compatible with the previous versions, the underlying database schema was significantly modified due to performance and scalability improvements.
Therefore the *usual database-only upgrade procedure is not applicable for upgrades* to midPoint 3.8. Export and import of the data is necessary in this case.
Therefore following procedure has be followed for this upgrade:

* Upgrade instructions from 3.7.1: xref:upgrade-3-7-1-to-3-8.adoc[Upgrade 3.7.1 to 3.8]

MidPoint 3.8 is a release that fixes some issues of previous versions and there were also improvements to existing functionality.
Therefore there are some changes that may not be strictly backward compatible with previous versions:

* Version numbers of some bundled connectors have changed.
Therefore connector references from the resource definitions that are using the bundled connectors need to be updated.

=== Changes in initial objects since 3.7 and 3.7.1

MidPoint has a built-in set of "initial objects" that it will automatically create in the database if they are not present.
This includes vital objects for the system to be configured (e.g. role `superuser` and user `administrator`). These objects may change in some midPoint releases.
But to be conservative and to avoid configuration overwrite midPoint does not overwrite existing objects when they are already in the database.
This may result in upgrade problems if the existing object contains configuration that is no longer supported in a new version.
Therefore the following list contains a summary of changes to the initial objects in this midPoint release.
The complete new set of initial objects is in the `config/initial-objects` directory in both the source and binary distributions.
Although any problems caused by the change in initial objects is unlikely to occur, the implementors are advised to review the following list and assess the impact on case-by-case basis:

* 000-system-configuration.xml: renamed file to "000" to allow polystring normalizer configuration on initial import, updated logging setting (hibernate)
* 030-role-superuser.xml: changed roleType to subtype
* 040-role-enduser.xml: changed roleType to subtype, authorizations for function library
* 041-role-approver.xml: changed roleType to subtype, authorizations for function library
* 042-role-reviewer.xml: changed roleType to subtype, authorizations for function library
* 043-role-delegator.xml: changed roleType to subtype, authorizations for function library
* 200-lookup-languages.xml: new supported languages: Italian, French
* 210-lookup-locales.xml: new supported locales: Italian, French

=== Bundled connector changes since 3.7 and 3.7.1

* The *LDAP connector* and *AD Connector* were upgraded to the latest available version.
The reason is a vulnerability in CredSSP protocol version 4 and earlier (CVE-2018-0886). Microsoft implemented CredSSP versions 5 and 6 to mitigate the issue.
However those versions are incompatible with previous versions, therefore new implementation has to be done in the connector.

* *CSV connector* now supports script execution (executing operating system commands).

=== Behavior changes since 3.7 and 3.7.1

* Parsing of search filters was made a bit more strict: certain classes of errors related to type and exists filter clauses are now checked during filter parsing instead of previous approach that checked them when the filter was to be applied.
This means that roles or other objects containing such malformed filters are only partially usable: they can be read from the repository (to be used during midPoint execution, displayed via standard GUI or on Repository objects page); however, such objects cannot be modified in any way.
The only way how to modify them is to fix malformed filters first using Repository objects page.

* Result of a task object is not returned by default.
It has to be explicitly requested.

=== Public interface changes since 3.7 and 3.7.1

* REST interface was extended with experimental password reset method.

* xref:/midpoint/reference/latest/security/audit/[Audit table] was extended and modified

** `id` column in `m_audit_event` table is now generated by default (auto increment)

** Columns `delta` and `fullResult` in `m_audit_delta` table are compressed using GZIP

=== Important internal changes since 3.7 and 3.7.1

These changes should not influence people that use midPoint "as is".
These changes should also not influence the XML/JSON/YAML-based customizations or scripting expressions that rely just on the provided library classes.
These changes will influence midPoint forks and deployments that are heavily customized using the Java components.

* Definition of Unified Connector Framework (UCF) interface was changed to improve error handling.
As this is experimental interface, please see source code history for description of changes.

* Definition of Java manual connector interface (abstract classes) was changed.
As this is experimental interface, please see source code history for description of changes.


++++
{% include release-issues.html %}
++++

There is a support to set up storage of credentials in either encrypted or hashed form.
There is also unsupported and undocumented option to turn off credential storage.
This option partially works, but there may be side effects and interactions.
This option is not fully supported yet.
Do not use it or use it only at your own risk.
It is not included in any midPoint support agreement.

Native attribute with the name of 'id' cannot be currently used in midPoint (bug:MID-3872[]). If the attribute name in the resource cannot be changed then the workaround is to force the use of legacy schema.
In that case midPoint will use the legacy ConnId attribute names (icfs:name and icfs:uid).

JavaDoc is temporarily not available due to the link:https://bugs.openjdk.java.net/browse/JDK-8061305[issue in Java platform]. This issue is fixed in Java 9 platform, but backport of this fix to Java 8 is (quite surprisingly) not planned.